// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalRoller component navigates to next page 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -19,11 +19,11 @@
            </h2>
            <div
              class=\\"VerticalRoller-selectors-149\\"
            >
              <button
-               class=\\"MuiButtonBase-root VerticalRoller-selector-150 RollerSelector-root-169 RollerSelector-selected-170\\"
+               class=\\"MuiButtonBase-root VerticalRoller-selector-150 RollerSelector-root-169\\"
                tabindex=\\"0\\"
                type=\\"button\\"
              >
                Approved Installers
                <svg
@@ -39,11 +39,11 @@
                <span
                  class=\\"MuiTouchRipple-root\\"
                />
              </button>
              <button
-               class=\\"MuiButtonBase-root VerticalRoller-selector-150 RollerSelector-root-169\\"
+               class=\\"MuiButtonBase-root VerticalRoller-selector-150 RollerSelector-root-169 RollerSelector-selected-170\\"
                tabindex=\\"0\\"
                type=\\"button\\"
              >
                Realiable Warranties
                <svg
@@ -113,19 +113,24 @@
              >
                <span
                  class=\\"SlideControls-slidingSlot-176\\"
                >
                  <span
-                   class=\\"SlideControls-numbers-179\\"
+                   class=\\"SlideControls-numbers-179 SlideControls-up-180\\"
                  >
                    <span
-                     class=\\"SlideControls-number-184 SlideControls-active-183\\"
+                     class=\\"SlideControls-number-184\\"
                    >
                      01
                    </span>
+                   <span
+                     class=\\"SlideControls-number-184 SlideControls-active-183\\"
+                   >
+                     02
                    </span>
                  </span>
+               </span>
                <span
                  class=\\"SlideControls-total-182\\"
                >
                  03
                </span>
@@ -173,11 +178,11 @@
                <div
                  style=\\"overflow-x: hidden;\\"
                >
                  <div
                    class=\\"react-swipeable-view-container\\"
-                   style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;\\"
+                   style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; transform: translate(-400%, 0);\\"
                  >
                    <div
                      aria-hidden=\\"false\\"
                      class=\\"Carousel__slide--global\\"
                      data-swipeable=\\"true\\"
@@ -192,29 +197,25 @@
                          style=\\"width: 100%;\\"
                        >
                          <div
                            class=\\"VerticalRoller-image-154\\"
                          >
-                           <svg
-                             class=\\"VerticalRoller-brandIcon-156\\"
+                           <img
+                             alt=\\"Lorem ipsum\\"
+                             class=\\"Media-root-218\\"
+                             src=\\"path-to-image\\"
                            />
                          </div>
-                         <p
-                           class=\\"MuiTypography-root VerticalRoller-description-157 Typography-root-161 MuiTypography-body1\\"
-                           data-testid=\\"typography\\"
-                         >
-                           Accredited BMI installers are masters of their craft and available all over Norway.
-                         </p>
                          <button
                            class=\\"MuiButtonBase-root MuiButton-root Button-root-188 MuiButton-contained Button-contained-190 VerticalRoller-button-158 MuiButton-containedPrimary\\"
                            tabindex=\\"0\\"
                            type=\\"button\\"
                          >
                            <span
                              class=\\"MuiButton-label Button-label-191\\"
                            >
-                             Go to Approved Installers
+                             Go to Realiable Warranties
                              <span
                                class=\\"MuiButton-endIcon MuiButton-iconSizeMedium\\"
                              >
                                <svg
                                  aria-hidden=\\"true\\""
`;

exports[`VerticalRoller component navigates to previous page 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -19,11 +19,11 @@
            </h2>
            <div
              class=\\"VerticalRoller-selectors-222\\"
            >
              <button
-               class=\\"MuiButtonBase-root VerticalRoller-selector-223 RollerSelector-root-242 RollerSelector-selected-243\\"
+               class=\\"MuiButtonBase-root VerticalRoller-selector-223 RollerSelector-root-242\\"
                tabindex=\\"0\\"
                type=\\"button\\"
              >
                Approved Installers
                <svg
@@ -59,11 +59,11 @@
                <span
                  class=\\"MuiTouchRipple-root\\"
                />
              </button>
              <button
-               class=\\"MuiButtonBase-root VerticalRoller-selector-223 RollerSelector-root-242\\"
+               class=\\"MuiButtonBase-root VerticalRoller-selector-223 RollerSelector-root-242 RollerSelector-selected-243\\"
                tabindex=\\"0\\"
                type=\\"button\\"
              >
                slide 3
                <svg
@@ -113,14 +113,19 @@
              >
                <span
                  class=\\"SlideControls-slidingSlot-249\\"
                >
                  <span
-                   class=\\"SlideControls-numbers-252\\"
+                   class=\\"SlideControls-numbers-252 SlideControls-down-254\\"
                  >
                    <span
                      class=\\"SlideControls-number-257 SlideControls-active-256\\"
+                   >
+                     03
+                   </span>
+                   <span
+                     class=\\"SlideControls-number-257\\"
                    >
                      01
                    </span>
                  </span>
                </span>
@@ -173,11 +178,11 @@
                <div
                  style=\\"overflow-x: hidden;\\"
                >
                  <div
                    class=\\"react-swipeable-view-container\\"
-                   style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;\\"
+                   style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; transform: translate(-200%, 0);\\"
                  >
                    <div
                      aria-hidden=\\"false\\"
                      class=\\"Carousel__slide--global\\"
                      data-swipeable=\\"true\\"
@@ -191,30 +196,20 @@
                          data-test-class-name=\\"slide\\"
                          style=\\"width: 100%;\\"
                        >
                          <div
                            class=\\"VerticalRoller-image-227\\"
-                         >
-                           <svg
-                             class=\\"VerticalRoller-brandIcon-229\\"
                          />
-                         </div>
-                         <p
-                           class=\\"MuiTypography-root VerticalRoller-description-230 Typography-root-234 MuiTypography-body1\\"
-                           data-testid=\\"typography\\"
-                         >
-                           Accredited BMI installers are masters of their craft and available all over Norway.
-                         </p>
                          <button
                            class=\\"MuiButtonBase-root MuiButton-root Button-root-261 MuiButton-contained Button-contained-263 VerticalRoller-button-231 MuiButton-containedPrimary\\"
                            tabindex=\\"0\\"
                            type=\\"button\\"
                          >
                            <span
                              class=\\"MuiButton-label Button-label-264\\"
                            >
-                             Go to Approved Installers
+                             Go to side 3
                              <span
                                class=\\"MuiButton-endIcon MuiButton-iconSizeMedium\\"
                              >
                                <svg
                                  aria-hidden=\\"true\\""
`;

exports[`VerticalRoller component renders correctly 1`] = `
<div>
  <div
    class="VerticalRoller-root-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-align-items-xs-flex-start"
    >
      <div
        class="MuiGrid-root Grid-item-13 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
      >
        <div
          class="VerticalRoller-leftColumn-2"
        >
          <h2
            class="MuiTypography-root Typography-root-15 Typography-underline-17 MuiTypography-h2"
            data-testid="typography"
          >
            H2 Heading
          </h2>
          <div
            class="VerticalRoller-selectors-3"
          >
            <button
              class="MuiButtonBase-root VerticalRoller-selector-4 RollerSelector-root-23 RollerSelector-selected-24"
              tabindex="0"
              type="button"
            >
              Approved Installers
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root RollerSelector-icon-25"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root VerticalRoller-selector-4 RollerSelector-root-23"
              tabindex="0"
              type="button"
            >
              Realiable Warranties
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root RollerSelector-icon-25"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root VerticalRoller-selector-4 RollerSelector-root-23"
              tabindex="0"
              type="button"
            >
              slide 3
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root RollerSelector-icon-25"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="SlideControls-root-26 SlideControls-vertical-28 VerticalRoller-controls-5"
          >
            <button
              aria-label="previous"
              class="MuiButtonBase-root MuiIconButton-root IconButton-root-53 iconButton IconButton-medium-59 IconButton-text-55"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root SlideControls-chevron-32"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <span
              class="SlideControls-middleContainer-31"
            >
              <span
                class="SlideControls-slidingSlot-30"
              >
                <span
                  class="SlideControls-numbers-33"
                >
                  <span
                    class="SlideControls-number-38 SlideControls-active-37"
                  >
                    01
                  </span>
                </span>
              </span>
              <span
                class="SlideControls-total-36"
              >
                03
              </span>
            </span>
            <button
              aria-label="next"
              class="MuiButtonBase-root MuiIconButton-root IconButton-root-53 iconButton IconButton-medium-59 IconButton-text-55"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root SlideControls-chevron-32"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root Grid-item-13 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
      >
        <div
          class="VerticalRoller-rightColumn-6"
        >
          <div
            class="Carousel-wrapper-66"
          >
            <div
              class="Carousel-root-62 Carousel-swipable-71"
              data-testid="carousel"
            >
              <div
                style="overflow-x: hidden;"
              >
                <div
                  class="react-swipeable-view-container"
                  style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
                >
                  <div
                    aria-hidden="false"
                    class="Carousel__slide--global"
                    data-swipeable="true"
                    style="width: 100%; flex-shrink: 0; overflow: auto;"
                  >
                    <div
                      class="Carousel-page-65"
                    >
                      <div
                        class="Carousel-slide-63 VerticalRoller-slide-7"
                        data-test-class-name="slide"
                        style="width: 100%;"
                      >
                        <div
                          class="VerticalRoller-image-8"
                        >
                          <svg
                            class="VerticalRoller-brandIcon-10"
                          />
                        </div>
                        <p
                          class="MuiTypography-root VerticalRoller-description-11 Typography-root-15 MuiTypography-body1"
                          data-testid="typography"
                        >
                          Accredited BMI installers are masters of their craft and available all over Norway.
                        </p>
                        <button
                          class="MuiButtonBase-root MuiButton-root Button-root-42 MuiButton-contained Button-contained-44 VerticalRoller-button-12 MuiButton-containedPrimary"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label Button-label-45"
                          >
                            Go to Approved Installers
                            <span
                              class="MuiButton-endIcon MuiButton-iconSizeMedium"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VerticalRoller component renders correctly on onClick 1`] = `
<div>
  <div
    class="VerticalRoller-root-74"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-align-items-xs-flex-start"
    >
      <div
        class="MuiGrid-root Grid-item-86 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
      >
        <div
          class="VerticalRoller-leftColumn-75"
        >
          <h2
            class="MuiTypography-root Typography-root-88 Typography-underline-90 MuiTypography-h2"
            data-testid="typography"
          >
            H2 Heading
          </h2>
          <div
            class="VerticalRoller-selectors-76"
          >
            <button
              class="MuiButtonBase-root VerticalRoller-selector-77 RollerSelector-root-96 RollerSelector-selected-97"
              tabindex="0"
              type="button"
            >
              Approved Installers
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root RollerSelector-icon-98"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root VerticalRoller-selector-77 RollerSelector-root-96"
              tabindex="0"
              type="button"
            >
              Realiable Warranties
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root RollerSelector-icon-98"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <button
              class="MuiButtonBase-root VerticalRoller-selector-77 RollerSelector-root-96"
              tabindex="0"
              type="button"
            >
              slide 3
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root RollerSelector-icon-98"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                />
              </svg>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="SlideControls-root-99 SlideControls-vertical-101 VerticalRoller-controls-78"
          >
            <button
              aria-label="previous"
              class="MuiButtonBase-root MuiIconButton-root IconButton-root-126 iconButton IconButton-medium-132 IconButton-text-128"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root SlideControls-chevron-105"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <span
              class="SlideControls-middleContainer-104"
            >
              <span
                class="SlideControls-slidingSlot-103"
              >
                <span
                  class="SlideControls-numbers-106"
                >
                  <span
                    class="SlideControls-number-111 SlideControls-active-110"
                  >
                    01
                  </span>
                </span>
              </span>
              <span
                class="SlideControls-total-109"
              >
                03
              </span>
            </span>
            <button
              aria-label="next"
              class="MuiButtonBase-root MuiIconButton-root IconButton-root-126 iconButton IconButton-medium-132 IconButton-text-128"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root SlideControls-chevron-105"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root Grid-item-86 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
      >
        <div
          class="VerticalRoller-rightColumn-79"
        >
          <div
            class="Carousel-wrapper-139"
          >
            <div
              class="Carousel-root-135 Carousel-swipable-144"
              data-testid="carousel"
            >
              <div
                style="overflow-x: hidden;"
              >
                <div
                  class="react-swipeable-view-container"
                  style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
                >
                  <div
                    aria-hidden="false"
                    class="Carousel__slide--global"
                    data-swipeable="true"
                    style="width: 100%; flex-shrink: 0; overflow: auto;"
                  >
                    <div
                      class="Carousel-page-138"
                    >
                      <div
                        class="Carousel-slide-136 VerticalRoller-slide-80"
                        data-test-class-name="slide"
                        style="width: 100%;"
                      >
                        <div
                          class="VerticalRoller-image-81"
                        >
                          <svg
                            class="VerticalRoller-brandIcon-83"
                          />
                        </div>
                        <p
                          class="MuiTypography-root VerticalRoller-description-84 Typography-root-88 MuiTypography-body1"
                          data-testid="typography"
                        >
                          Accredited BMI installers are masters of their craft and available all over Norway.
                        </p>
                        <button
                          class="MuiButtonBase-root MuiButton-root Button-root-115 MuiButton-contained Button-contained-117 VerticalRoller-button-85 MuiButton-containedPrimary"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label Button-label-118"
                          >
                            Go to Approved Installers
                            <span
                              class="MuiButton-endIcon MuiButton-iconSizeMedium"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
